--- a/src/app/rando-list/rando-list.component.html
+++ b/src/app/rando-list/rando-list.component.html
@@ -16,6 +16,8 @@
           <th scope="col">Coût fixe</th>
           <th scope="col">Coût variable</th>
           <th scope="col">Coût consolidé</th>
+          <th scope="col">Vote</th>
+          <th scope="col">Inscription</th>
         </tr>
       </thead>
       <tbody>
@@ -32,6 +34,8 @@
           <td>25 €</td>
           <td>5 €</td>
           <td>30 €</td>
+          <td><button class="btn btn-outline-secondary">Voter</button></td>
+          <td><button class="btn btn-outline-secondary">S'inscrire</button></td>
         </tr>
         <tr>
           <th scope="row">2</th>
@@ -46,6 +50,8 @@
           <td>25 €</td>
           <td>2 €</td>
           <td>27 €</td>
+          <td><button class="btn btn-outline-secondary">Voter</button></td>
+          <td><button class="btn btn-outline-secondary">S'inscrire</button></td>
         </tr>
         <tr>
           <th scope="row">3</th>
@@ -60,6 +66,8 @@
           <td>15 €</td>
           <td>0 €</td>
           <td>15 €</td>
+          <td><button class="btn btn-outline-secondary" ng-click="voter()">Voter</button></td>
+          <td><button class="btn btn-outline-secondary">S'inscrire</button></td>
         </tr>
       </tbody>
     </table>
