--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 /* BASIC */
 
 html {
-    background-color: #56baed;
+    /*background-color: #56baed;*/
   }
   
   body {
@@ -38,6 +38,8 @@ html {
     flex-direction: column; 
     justify-content: center;
     width: 100%;
+    
+    min-width: 100%;
     min-height: 100%;
     padding: 20px;
   }
@@ -47,8 +49,8 @@ html {
     border-radius: 10px 10px 10px 10px;
     background: #fff;
     padding: 30px;
-    width: 90%;
-    max-width: 450px;
+    width: 100%;
+    max-width: 100%;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
