Ajout des fichiers pour la gestion des membres

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div style="text-align: center;" *ngIf="clicConnexion==true">
+  <div *ngIf="clicConnexion==true"><!--style="text-align: center;"--> 
     <app-membre-form></app-membre-form>
   </div>
 </div>
