--- a/src/app/rando-list/rando-list.component.html
+++ b/src/app/rando-list/rando-list.component.html
@@ -21,7 +21,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+          <tr *ngFor="let rando of this.randonnees">
           <th scope="row">1</th>
           <td>Mark</td>
           <td>On va marcher</td>
